# bike_game_2.0

./: .gitignore  README.md  class.h
bike_game_2.0/: CMakeLists.txt
bike_game_2.0/header/: gameEngine.h  player.h
bike_game_2.0/src/: LeaderBoard.cpp  background.cpp  bike.cpp
header/: GameObject.h  LeaderBoard.h  background.h  bike.h  game.h  gameEngine.h  obstacle.h  player.h  score.h
src/: LeaderBoard.cpp  backgroun.cpp  background.cpp  bike.cpp  game.cpp  gameEngine.cpp  main.cpp  obstacles.cpp  player.cpp  score.cpp
